# temporal-sre-copilot

./: .gitignore  AGENTS.md  Dockerfile  Justfile  LICENSE  README.md  pyproject.toml
.kiro/hooks/: safe-commit-push.kiro.hook
.kiro/specs/enhance-config-ux/: design.md  requirements.md  tasks.md
.kiro/specs/narrative-coherence/: design.md  requirements.md  tasks.md
.kiro/specs/scale-aware-thresholds/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/standalone-dev/: design.md  requirements.md  tasks.md
.kiro/specs/temporal-sre-copilot/: design.md  requirements.md  tasks.md
.kiro/steering/: copilot.md
dev/: .env.example  README.md  docker-compose.yml
dev/config/: alloy.alloy  grafana-dashboards.yaml  grafana-datasources.yaml  loki.yaml  mimir.yaml
dev/docker/: Dockerfile  persistence-dsql-elasticsearch.template.yaml  render-and-start.sh
dev/dynamicconfig/: development-dsql.yaml
dev/scenarios/: README.md  metrics.py
dev/scenarios/copilot/: error_injection.py  spike_load.py  stress_workflows.py
dev/scenarios/dsql/: load_test.py
docs/: behaviour-profiles.md  config-compiler.md
docs/rag/: poller_configuration.md  sticky_cache_tuning.md  worker_scaling.md
eval/: README.md  collect-signals.py  post-test-analysis-template.md
grafana/copilot/: copilot.json
grafana/dsql/: persistence.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/server/: server.json
scripts/: apply_copilot_schema.py
src/copilot/: api.py
terraform/dev/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_adapters.py  test_backward_compat.py  test_compose_config_resolution.py  test_guard_rails.py  test_presets.py  test_profile_api.py  test_profile_loader.py  test_scale_aware_thresholds.py  test_serialization.py  test_workflow_sandbox.py
tests/properties/: __init__.py  strategies.py  test_behaviour_profiles.py  test_bottleneck.py  test_config_compiler.py  test_scale_aware_thresholds.py  test_state_machine.py
(+43 files in other folders)
