[project]
name = "temporal-sre-copilot"
version = "0.1.0"
description = "AI-powered observability agent for Temporal deployments on Aurora DSQL"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.11",
    "pydantic-ai>=1.58",
    "pydantic-settings>=2.10",
    "temporalio>=1.20",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "boto3>=1.36",
    "asyncpg>=0.30",
    "aurora-dsql-python-connector",
    "typer>=0.15",
    "rich>=13.9",
    "whenever>=0.9.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.122",
    "ruff>=0.11",
]

[project.scripts]
copilot = "copilot.cli:app"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "copilot"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
