[project]
name = "temporal-sre-copilot-workspace"
version = "0.1.0"
description = "AI-powered observability agent for Temporal deployments on Aurora DSQL"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.122",
    "ruff>=0.11",
]

[tool.uv]
workspace = { members = ["packages/*"] }

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["copilot", "copilot_core", "dsql_config", "behaviour_profiles"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
